# File-Transfer-Queue

./: README.md  TODO  cli.py  copy test.bat  file_ops.py  localtasks.csv  paramikotest.py  pyproject.toml  scheduler.py  sftptasks.csv  sftptest.txt  task_executor.py  task_manager.py  task_parser.py  tasks.csv
cli/: cli.py  file_ops.py  localtasks.csv  sftptasks.csv
gui/: button_functions.py  file_ops.py  gui.py  localtasks.csv  main.py  sftptasks.csv  task_executor.py  task_manager.py
gui/exe/: exenotes.txt
src/cli/: sftptasks.csv  task_manager.py
src/file_transfer_queue.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gui/: button_functions.py  gui.py  main.py  sftptasks.csv  task_executor.py  task_manager.py  task_parser.py
tests/: tkintertest.py
