[project]
name = "file-transfer-queue"
version = "0.1.0"
authors = [
    { name = "Anthony Petrosino" },
]
description = "A Python app for automating file transfers between local and remote locations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "bcrypt==4.3.0",
    "cffi==1.17.1",
    "colorama==0.4.6",
    "cryptography==45.0.3",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "paramiko==3.5.1",
    "pefile==2023.2.7",
    "pluggy==1.6.0",
    "pycparser==2.22",
    "Pygments==2.19.1",
    "pyinstaller==6.14.1",
    "pyinstaller-hooks-contrib==2025.5",
    "PyNaCl==1.5.0",
    "pytest==8.4.0",
    "pywin32-ctypes==0.2.3",
    "schedule==1.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
file-transfer-cli = "cli.cli:main"
file-transfer-gui = "gui.main:main"

[project.urls]
"Homepage" = "https://github.com/anthonypetrosino/file-transfer-queue"